/* RiftIO protobuf extension option declarations */

/* These numbers are hard coded into the protoc-c compiler.  It would
   be better to rebuild the whole protoc suite with the extensions
   present so as to have them parsed by itself.  Bit of a bootstrap
   headache, that. */

import "descriptor.proto";

message RwFieldOptions {
  /*unimplemented  optional bool agg = 1 [ default = false ]; */
  optional bool inline = 2 [ default = false ];
  optional uint32 inline_max = 3 [ default = 0 ];
  optional uint32 string_max = 4 [ default = 0 ];
  optional string c_type = 5 [ default = "", (rw_fopts) = { inline:true string_max:64} ];
  optional bool key = 6 [ default = false ];
  optional bool log_common = 7 [ default = false ];
  optional uint32 log_event_id = 8 [ default = 0 ];
  optional string merge_behavior = 9 [ default = "default", (rw_fopts) = { inline:true string_max:8} ];
}
extend google.protobuf.FieldOptions {
  optional RwFieldOptions rw_fopts = 50003;
}


message RwMessageOptions {
  optional bool flat = 1 [ default = false ];
  /* unimplemented  optional bool comp = 2 [ default = false ]; */
  optional string ypbc_msg = 3 [ default = "" ];
  optional bool suppress = 4 [ default = false ];
  optional bool has_keys = 5 [ default = false ];
  optional bool log_event_type = 6 [ default = false ];
  optional string c_typedef = 7 [ default = "" ];
  optional string c_typename = 8 [ default = "" ];
  optional string base_typename = 9 [ default = "" ]; /* ATTN: Should be repeated */
  optional string msg_new_path = 10 [ default = "" ];
  optional bool hide_from_gi = 11 [ default = false ];	
}
extend google.protobuf.MessageOptions {
  optional RwMessageOptions rw_msgopts = 50001;
}


enum RwMethodPriority {
  RW_METHPRI_LOW = 0;
  RW_METHPRI_MEDIUM = 1;
  RW_METHPRI_HIGH = 2;
  RW_METHPRI_PLATFORM = 3;
}
message RwMethodOptions {
  required int32 methno = 1;
  optional RwMethodPriority pri = 2 [ default = RW_METHPRI_LOW ];
  optional bool blocking = 3 [ default = false ];
}
extend google.protobuf.MethodOptions {
  optional RwMethodOptions rw_methopts = 50000;
}


message RwServiceOptions {
  required uint32 srvnum = 1;
}
extend google.protobuf.ServiceOptions {
  optional RwServiceOptions rw_srvopts = 50002;
}


message RwEnumOptions {
  optional string c_prefix = 1 [ default = "" ];
  optional string ypbc_enum = 2 [ default = "" ];
}
extend google.protobuf.EnumOptions {
  optional RwEnumOptions rw_enumopts = 50004;
}

message RwFileOptions {
  repeated string c_include = 1;
  optional bool gen_gi = 2 [ default = false ];
}
extend google.protobuf.FileOptions {
  optional RwFileOptions rw_fileopts = 50005;
}

